# Kiribati

./: .env.example  .gitignore  README.md  agent.py  followups.html  pyproject.toml  sources.yaml
.github/workflows/: daily.yml  daily_agent.yml
prompts/: daily_brief_system.md
src/kiribati_monitor/: __init__.py  brief.py  classify.py  emailer.py  ingest.py  models.py  observability.py  run_daily.py  static_site.py  storage.py
src/kiribati_monitor/templates/: daily_brief.md.j2  email_brief.html.j2
tests/: test_brief.py  test_classification.py  test_followups_agent.py  test_ingest.py  test_run_daily.py  test_sources.py  test_static_site.py  test_storage.py
